Making changes to the configs

--- a/waybar/style.css
+++ b/waybar/style.css
@@ -347,4 +347,12 @@ label:focus {
     background-color: @background;
 }
 
-
+#upower{
+    background-color: @background;
+    font-size: 16px;
+    color: @foreground;
+    border-radius: 12px;
+    padding: 2px 15px 0px 10px;
+    margin: 1px 5px 5px 0px;
+    opacity:0.8;
+}
